# ai-mastery

./: .gitignore  Dockerfile  LESSONS.md  README.md  SESSION_CONTEXT.md  app.py  benchmark_embeddings.json  case_study_mes4.md  cv.txt  jobs.json  jobs_demo.json  news.db  prefect.yaml  pyproject.toml  requirements_hf.txt  test_docs.txt  test_hyde.py  test_jobs.json  test_news.db
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
chroma_research/: chroma.sqlite3
flows/: bot_flow.py
notebooks/: README.md
prompts/: default_prompts.yaml
scripts/: benchmark_embeddings.py  demo.py
src/ai_mastery/: agent.py  assistant.py  bot_integrator.py  cli.py  crew_module.py  db_manager.py  hyde.py  memory.py  ollama_client.py  prompt_loader.py  reranker.py  scraper.py  scraper_web.py  utils.py
src/ai_mastery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_assistant.py  test_bot_integrator.py  test_cli.py  test_crew_module.py  test_memory.py  test_ollama_client.py  test_scraper.py  test_scraper_web.py
