[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mastery"
version = "0.1.0"
description = "Tu laboratorio de excelencia en IA Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "feedparser>=6.0.0",
    "ollama>=0.5.0",
    "langchain>=0.3.3,<0.4.0",
    "langchain-ollama>=0.2.0,<0.3.0",
    "langchain-community>=0.3.3,<0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]